# arraymin

./: Cargo.toml  build.rs
.cargo/: config
benches/: bench.rs
src/: c_impl.c  lib.rs  rand.rs
