[package]
name = "arraymin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[dev-dependencies]
criterion = "0.5.0"

[build-dependencies]
cc = "1.0"
cargo-emit = "0.2"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = 2

[profile.release]
debug = 2
